Add signin with google, implement redux, add new user data in firestore

--- a/src/components/commons/Avatar/AvatarStyle.scss
+++ b/src/components/commons/Avatar/AvatarStyle.scss
@@ -2,6 +2,7 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
+    overflow: hidden;
     background-color: rgb(255, 168, 168);
     img {
         height: 100%;
