--- a/src/components/pages/login_page/LoginPageStyle.scss
+++ b/src/components/pages/login_page/LoginPageStyle.scss
@@ -1,4 +1,4 @@
-.EnterNumber {
+.LoginPage {
     .Container {
         width: 400px;
         display: flex;
@@ -58,6 +58,28 @@
             font-size: 14px;
             border-radius: 3px;
             cursor: pointer;
+        }
+        .Divider {
+            font-size: 18px;
+            color: rgb(78, 78, 78);
+            margin: 20px 0px;
+        }
+        .GoogleLoginButton {
+            padding: 10px 40px;
+            background-color: rgb(28, 120, 224);
+            color: white;
+            outline: none;
+            border: none;
+            border-radius: 3px;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            .GoogleIcon {
+                height: 30px;
+                width: 30px;
+                margin-right: 20px;
+            }
+
         }
 
     }
