Add search friends feature

--- a/src/components/main_app/side_section/SideSectionStyle.scss
+++ b/src/components/main_app/side_section/SideSectionStyle.scss
@@ -94,6 +94,9 @@
                     color: rgb(167, 167, 167);
                 }
             }
+            button {
+                display: none;
+            }
         }
     }
     .MessageOverviewList {
