--- a/src/components/main_app/side_section/message_overview/MessageOverview.scss
+++ b/src/components/main_app/side_section/message_overview/MessageOverview.scss
@@ -39,5 +39,8 @@
             font-size: 14px;
             color: rgb(109, 109, 109);
         }
+        .DisplayNone {
+            display: none;
+        }
     }
 }
