Initial product complete

--- a/src/components/commons/Avatar/AvatarStyle.scss
+++ b/src/components/commons/Avatar/AvatarStyle.scss
@@ -3,7 +3,9 @@
     width: 50px;
     border-radius: 50%;
     overflow: hidden;
-    background-color: rgb(255, 168, 168);
+    // background-color: rgb(255, 168, 168);
+    background-image: url('../../../assets/icons/avatar.svg');
+    background-size: contain;
     img {
         height: 100%;
         width: 100%;
