--- a/src/components/main_app/side_section/search_result_item/SearchResultItem.scss
+++ b/src/components/main_app/side_section/search_result_item/SearchResultItem.scss
@@ -35,7 +35,7 @@
                 color: rgb(143, 143, 143);
             }
         }
-        .LastMessage {
+        .Email {
             font-size: 14px;
             color: rgb(109, 109, 109);
         }
@@ -43,7 +43,4 @@
             display: none;
         }
     }
-}
-.Active {
-    background-color: rgb(235, 235, 235);
 }
