--- a/src/components/pages/login_page/LoginPageStyle.scss
+++ b/src/components/pages/login_page/LoginPageStyle.scss
@@ -1,6 +1,6 @@
 .LoginPage {
     .Container {
-        width: 400px;
+        width: 380px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -18,6 +18,7 @@
         .DescriptionText {
             color: rgb(78, 78, 78);
             margin-bottom: 80px;
+            text-align: center;
         }
         .InputNumber {
             font-size: 24px;
@@ -60,9 +61,11 @@
             cursor: pointer;
         }
         .Divider {
-            font-size: 18px;
             color: rgb(78, 78, 78);
             margin: 20px 0px;
+        }
+        .LoginText {
+            color: rgb(78, 78, 78);
         }
         .GoogleLoginButton {
             padding: 10px 40px;
@@ -80,6 +83,15 @@
                 margin-right: 20px;
             }
 
+        }
+        .GoogleSignUpButton {
+            background-color: transparent;
+            color: rgb(28, 120, 224);
+            border: none;
+            cursor: pointer;
+            font-size: 15px;
+            margin-left: 3px;
+            font-weight: 600;
         }
 
     }
