Fix MessageOverview rerender on message send and make the message side arrow like whatsapp

--- a/src/components/main_app/message_section/Message/MessageStyle.scss
+++ b/src/components/main_app/message_section/Message/MessageStyle.scss
@@ -35,6 +35,10 @@
             filter: blur(1px);
         }
     }
+    .ArrowNone {
+        display: none;
+    }
+    
     .Time {
         position: absolute;
         bottom: 4px;
