--- a/src/components/main_app/side_section/SideSectionStyle.scss
+++ b/src/components/main_app/side_section/SideSectionStyle.scss
@@ -140,3 +140,11 @@
         }
     }
 }
+
+
+@media screen and (max-width: 669px) {
+    .SideSection {
+        width: 100%;
+        max-width: 100%;
+    }
+  }
