--- a/src/components/main_app/home_section/HomeSectionStyle.scss
+++ b/src/components/main_app/home_section/HomeSectionStyle.scss
@@ -26,6 +26,7 @@
         transition: 0.2s;
         border: 3px solid white;
         box-shadow: 0px 0px 6px #c6c6c6;
+        text-decoration: none;
         &:hover {
         background-color: #149639;
         box-shadow: 0px 0px 20px #c6c6c6;
