--- a/src/components/pages/login_page/LoginPageStyle.scss
+++ b/src/components/pages/login_page/LoginPageStyle.scss
@@ -96,3 +96,13 @@
 
     }
 }
+
+@media only screen and (max-width: 480px) {
+    .LoginPage {
+        .Container {
+            width: 100%;
+            padding: 0px 20px;
+
+        }
+    }
+  }
